--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, html {
     width: 1000px;
     margin: auto;
     padding-top: 300px;
-    padding-bottom: 100px;
+    padding-bottom: 0px;
 }
 
 .section {
@@ -270,6 +270,7 @@ footer {
     background-color: #202426;
     text-align: center;
     padding: 20px 0px;
+    margin-top: 100px;
 }
 
 
